chore(backend): change bun packager manage to npm

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,10 @@
 FROM node:18.18.2-alpine
 
 RUN apk add --no-cache bash
-RUN curl -fsSL https://bun.sh/install | bash
 RUN npm i -g @nestjs/cli typescript ts-node
 
 COPY package*.json /tmp/app/
-RUN cd /tmp/app && bun i
+RUN cd /tmp/app && npm install
 
 COPY . /usr/src/app
 RUN cp -a /tmp/app/node_modules /usr/src/app
@@ -18,6 +17,6 @@ RUN sed -i 's/\r//g' /opt/startup.dev.sh
 
 WORKDIR /usr/src/app
 RUN if [ ! -f .env ]; then cp env-example .env; fi
-RUN bun build
+RUN npm run build
 
 CMD ["/opt/startup.dev.sh"]
