--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "description": "A gas station management",
-  "packageManager": "bun@1.0.6",
+  "packageManager": "pnpm@8.6.1",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
@@ -18,11 +18,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "typeorm": "env-cmd ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "bun typeorm -- --dataSource=src/database/data-source.ts migration:generate",
-    "migration:create": "bun typeorm -- migration:create",
-    "migration:run": "bun typeorm -- --dataSource=src/database/data-source.ts migration:run",
-    "migration:revert": "bun typeorm -- --dataSource=src/database/data-source.ts migration:revert",
-    "schema:drop": "bun typeorm -- --dataSource=src/database/data-source.ts schema:drop",
+    "migration:generate": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:generate",
+    "migration:create": "npm run typeorm -- migration:create",
+    "migration:run": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:run",
+    "migration:revert": "npm run typeorm -- --dataSource=src/database/data-source.ts migration:revert",
+    "schema:drop": "npm run typeorm -- --dataSource=src/database/data-source.ts schema:drop",
     "seed:create": "hygen seeds create",
     "seed:run": "ts-node -r tsconfig-paths/register ./src/database/seeds/run-seed.ts",
     "prebuild": "rimraf dist",
